add navbar and footer

--- a/src/app/components/public/our-team/our-team.component.html
+++ b/src/app/components/public/our-team/our-team.component.html
@@ -1,1 +1,9 @@
+<!-- Navbar Start -->
+<app-navbar></app-navbar>
+<!-- Navbar End -->
+
 <p>our-team works!</p>
+
+<!-- Footer Start -->
+<app-footer></app-footer>
+<!-- Footer End -->
