--- a/src/app/components/public/contact/contact.component.html
+++ b/src/app/components/public/contact/contact.component.html
@@ -1,1 +1,9 @@
+<!-- Navbar Start -->
+<app-navbar></app-navbar>
+<!-- Navbar End -->
+
 <p>contact works!</p>
+
+<!-- Footer Start -->
+<app-footer></app-footer>
+<!-- Footer End -->
