--- a/src/app/components/public/footer/footer.component.html
+++ b/src/app/components/public/footer/footer.component.html
@@ -79,4 +79,6 @@
 </div>
 
 <!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+<a (click)="scrollToTop()" class="btn btn-lg btn-primary btn-lg-square back-to-top">
+    <i class="bi bi-arrow-up"></i>
+</a>
