prepare register page

--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -1,1 +1,71 @@
-<p>register works!</p>
+<!-- Navbar Start -->
+<app-navbar></app-navbar>
+<!-- Navbar End -->
+
+<!-- Contact Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h6 class="section-title bg-white text-center text-primary px-3">Register</h6>
+            <h1 class="mb-5">Join our community</h1>
+        </div>
+        <div class="row g-4">
+
+            <div class="col col-md-12 wow fadeInUp" data-wow-delay="0.5s">
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="firstname" placeholder="Your Firstname">
+                                <label for="name">Your Firstname</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="lastname" placeholder="Your Lastname">
+                                <label for="name">Your Lastname</label>
+                            </div>
+                        </div>
+                        
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <p for="file">Your Image : <input type="file" class="form-control-file" id="file"> </p>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                <label for="email">Your Email</label>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="password" placeholder="**********">
+                                <label for="name">Your Password</label>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="repassword" placeholder="**********">
+                                <label for="name">Repeat Your Password</label>
+                            </div>
+                        </div>
+                        
+                        
+                        <div class="col-12">
+                            <button class="btn btn-primary w-100 py-3" type="submit">Register Now !</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Contact End -->
+
+<!-- Footer Start -->
+<app-footer></app-footer>
+<!-- Footer End -->
