--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -29,7 +29,7 @@
                         
                         <div class="col-12">
                             <div class="form-floating">
-                                <p for="file">Your Image : <input type="file" class="form-control-file" id="file"> </p>
+                                <p for="file">Import Your Image : <input type="file" class="form-control-file" id="file"> </p>
                             </div>
                         </div>
 
