--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -1,1 +1,57 @@
 <p>login works!</p>
+<!-- Navbar Start -->
+<app-navbar></app-navbar>
+<!-- Navbar End -->
+
+<!-- Contact Start -->
+<div class="container-xxl py-5">
+  <div class="container">
+
+
+
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+      <h6 class="section-title bg-white text-center text-primary px-3">Login</h6>
+      <h1 class="mb-5">Join our community</h1>
+    </div>
+    <div class="row g-4">
+
+      <div class="col col-md-12 wow fadeInUp" data-wow-delay="0.5s">
+       
+          <div class="row g-3">
+
+
+
+            <div class="col-6">
+              <div class="form-floating">
+                <input type="email" class="form-control" id="email" placeholder="Your Email">
+                <label for="email">Your Email</label>
+
+              </div>
+            </div>
+
+
+            <div class="col-md-6">
+              <div class="form-floating">
+                <input type="password" class="form-control" id="password" placeholder="**********">
+                <label for="name">Your Password</label>
+              </div>
+            </div>
+
+
+
+
+            <div class="col-12">
+              <button class="btn btn-primary w-100 py-3" type="submit">Login Now !</button>
+            </div>
+          </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact End -->
+
+
+  <!-- Footer Start -->
+  <app-footer></app-footer>
+  <!-- Footer End -->
