--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -1,4 +1,3 @@
-<p>login works!</p>
 <!-- Navbar Start -->
 <app-navbar></app-navbar>
 <!-- Navbar End -->
@@ -19,24 +18,26 @@
       <form [formGroup]="myform" (ngSubmit)="login()">
 
         <div class="col col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-          
+
           <div class="row g-3">
-  
+
             <div class="col-6">
               <div class="form-floating">
-                <input name ="email" type="email" class="form-control" id="email" placeholder="Your Email" formControlName="email">
+                <input name="email" type="email" class="form-control" id="email" placeholder="Your Email"
+                  formControlName="email">
                 <label for="email">Your Email</label>
                 <div *ngIf="email?.invalid && email?.touched">
                   <small *ngIf="email?.errors?.['required']" class="text-danger">Email is required<br></small>
                   <small *ngIf="email?.errors?.['email']" class="text-danger"> invalid Email<br></small>
                 </div>
               </div>
-              
-            </div>  
-  
+
+            </div>
+
             <div class="col-md-6">
               <div class="form-floating">
-                <input type="password" class="form-control" id="password" placeholder="**********" formControlName="password">
+                <input type="password" class="form-control" id="password" placeholder="**********"
+                  formControlName="password">
                 <div *ngIf="password?.invalid && password?.touched">
                   <small *ngIf="password?.errors?.['required']" class="text-danger">Password is required<br></small>
                   <small *ngIf="password?.errors?.['minlength']" class="text-danger"> Short password<br></small>
@@ -44,18 +45,18 @@
                 <label for="name">Your Password</label>
               </div>
             </div>
-  
-  
-  
-  
+
+
+
+
             <div class="col-12">
-              <button class="btn btn-primary w-100 py-3" type="submit" [disabled]="myform.invalid"  >Login Now !</button>
+              <button class="btn btn-primary w-100 py-3" type="submit" [disabled]="myform.invalid">Login Now !</button>
             </div>
           </div>
-  
+
         </div>
       </form>
-     
+
 
 
 
