route login register

--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -26,10 +26,11 @@
                                 <label for="name">Your Lastname</label>
                             </div>
                         </div>
-                        
+
                         <div class="col-12">
                             <div class="form-floating">
-                                <p for="file">Import Your Image : <input type="file" class="form-control-file" id="file"> </p>
+                                <p for="file">Import Your Image : <input type="file" class="form-control-file"
+                                        id="file"> </p>
                             </div>
                         </div>
 
@@ -46,18 +47,27 @@
                                 <label for="name">Your Password</label>
                             </div>
                         </div>
-                        
+
                         <div class="col-md-6">
                             <div class="form-floating">
                                 <input type="text" class="form-control" id="repassword" placeholder="**********">
                                 <label for="name">Repeat Your Password</label>
                             </div>
                         </div>
-                        
-                        
+
+
                         <div class="col-12">
                             <button class="btn btn-primary w-100 py-3" type="submit">Register Now !</button>
                         </div>
+
+                        <div class="col-12">
+                            <h6>I have already an account !
+                                <span routerLink="/login" class="text-primary goto-link">
+                                    Login Now !
+                                </span>
+                            </h6>
+                        </div>
+
                     </div>
                 </form>
             </div>
