--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -6,8 +6,6 @@
 <div class="container-xxl py-5">
   <div class="container">
 
-
-
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">Login</h6>
       <h1 class="mb-5">Join our community</h1>
@@ -46,23 +44,29 @@
               </div>
             </div>
 
-
-
-
             <div class="col-12">
               <button class="btn btn-primary w-100 py-3" type="submit" [disabled]="myform.invalid">Login Now !</button>
             </div>
+
+            <div class="col-12">
+              <h6>I don't have an account !
+                <span routerLink="/register" class="text-primary goto-link">
+                  Join Now !
+                </span>
+              </h6>
+            </div>
+
           </div>
 
         </div>
       </form>
+    </div>
+
+  </div>
+</div>
+<!-- Contact End -->
 
 
-
-
-      <!-- Contact End -->
-
-
-      <!-- Footer Start -->
-      <app-footer></app-footer>
-      <!-- Footer End -->
+<!-- Footer Start -->
+<app-footer></app-footer>
+<!-- Footer End -->
