--- a/src/app/components/private/shared/dashboard/dashboard.component.html
+++ b/src/app/components/private/shared/dashboard/dashboard.component.html
@@ -3,24 +3,7 @@
 <app-top-bar></app-top-bar>
 
     <div id="layoutSidenav">
-        <!-- SIDEBAR -->
-        <div id="layoutSidenav_nav">
-            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                <div class="sb-sidenav-menu">
-                    <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Core</div>
-                        <a class="nav-link" href="index.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Dashboard
-                        </a>
-                    </div>
-                </div>
-                <div class="sb-sidenav-footer">
-                    <div class="small">Logged in as:</div>
-                    Start Bootstrap
-                </div>
-            </nav>
-        </div>
+<app-side-bar></app-side-bar>
 
         <!-- CONTENT-->
         <div id="layoutSidenav_content">
@@ -102,19 +85,7 @@
                 </div>
             </main>
 
-            <!-- FOOTER -->
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2022</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+<app-footer-dashboard></app-footer-dashboard>
 
         </div>
     </div>
