--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -62,7 +62,7 @@
 
                         <div class="col-12">
                             <h6>I have already an account !
-                                <span routerLink="/login" class="text-primary goto-link">
+                                <span [routerLink]="['/login']" class="text-primary goto-link">
                                     Login Now !
                                 </span>
                             </h6>
