--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -84,7 +84,7 @@
 
 
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" [disabled]="registerForm.valid || repassword?.value != password?.value" type="submit">Register Now !</button>
+                            <button class="btn btn-primary w-100 py-3" [disabled]="registerForm.invalid || repassword?.value != password?.value" type="submit">Register Now !</button>
                         </div>
 
                         <div class="col-12">
