--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -75,7 +75,7 @@
                                 <div *ngIf="repassword?.invalid && repassword?.touched">
                                     <small *ngIf="repassword?.errors?.['required']" class="text-danger">repassword required<br></small>
                                     <small *ngIf="repassword?.errors?.['minLength']" class="text-danger"> invalid repassword<br></small>
-                                    <div *ngIf="repassword?.valid && repassword?.value != password?.value" class="text-danger">
+                                    <div *ngIf="repassword?.invalid || repassword?.value != password?.value" class="text-danger">
                                         The passwords entered do not match
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
 
 
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" [disabled]="registerForm.invalid || repassword?.value != password?.value" type="submit">Register Now !</button>
+                            <button class="btn btn-primary w-100 py-3" type="submit">Register Now !</button>
                         </div>
 
                         <div class="col-12">
