--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -15,32 +15,42 @@
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="firstname" placeholder="Your Firstname" formControlName="firstname">
+                                <input type="text" class="form-control" id="firstname" placeholder="Your Firstname"
+                                    formControlName="firstname">
                                 <label for="name">Your Firstname</label>
                                 <div *ngIf="firstname?.invalid && firstname?.touched">
-                                    <small *ngIf="firstname?.errors?.['required']" class="text-danger">Firstname required<br></small>
-                                    <small *ngIf="firstname?.errors?.['pattern']" class="text-danger"> invalid Firstname<br></small>
-                                    <small *ngIf="firstname?.errors?.['minLength']" class="text-danger"> invalid input<br></small>
+                                    <small *ngIf="firstname?.errors?.['required']" class="text-danger">Firstname
+                                        required<br></small>
+                                    <small *ngIf="firstname?.errors?.['pattern']" class="text-danger"> invalid
+                                        Firstname<br></small>
+                                    <small *ngIf="firstname?.errors?.['minlength']" class="text-danger">Firstname should
+                                        contains 2 chars at least<br></small>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="lastname" placeholder="Your Lastname" formControlName="lastname">
+                                <input type="text" class="form-control" id="lastname" placeholder="Your Lastname"
+                                    formControlName="lastname">
                                 <label for="name">Your Lastname</label>
                                 <div *ngIf="lastname?.invalid && lastname?.touched">
-                                    <small *ngIf="lastname?.errors?.['required']" class="text-danger">lastname required<br></small>
-                                    <small *ngIf="lastname?.errors?.['pattern']" class="text-danger"> invalid lastname<br></small>
-                                    <small *ngIf="lastname?.errors?.['minLength']" class="text-danger"> invalid input<br></small>
+                                    <small *ngIf="lastname?.errors?.['required']" class="text-danger">lastname
+                                        required<br></small>
+                                    <small *ngIf="lastname?.errors?.['pattern']" class="text-danger"> invalid
+                                        lastname<br></small>
+                                    <small *ngIf="lastname?.errors?.['minlength']" class="text-danger">Lastname should
+                                        contains 2 chars at least<br></small>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-12">
                             <div class="form-floating">
-                                <p for="file">Import Your Image : <input type="file" class="form-control-file" id="file" formControlName="file"> </p>
+                                <p for="file">Import Your Image : <input type="file" class="form-control-file" id="file"
+                                        formControlName="file"> </p>
                                 <div *ngIf="file?.invalid && file?.touched">
-                                    <small *ngIf="file?.errors?.['required']" class="text-danger">image required<br></small>
+                                    <small *ngIf="file?.errors?.['required']" class="text-danger">image
+                                        required<br></small>
 
                                 </div>
                             </div>
@@ -48,43 +58,52 @@
 
                         <div class="col-12">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email" formControlName="email">
+                                <input type="email" class="form-control" id="email" placeholder="Your Email"
+                                    formControlName="email">
                                 <label for="email">Your Email</label>
                                 <div *ngIf="firstname?.invalid && email?.touched">
-                                    <small *ngIf="email?.errors?.['required']" class="text-danger">email required<br></small>
-                                    <small *ngIf="email?.errors?.['email']" class="text-danger"> invalid email<br></small>
+                                    <small *ngIf="email?.errors?.['required']" class="text-danger">email
+                                        required<br></small>
+                                    <small *ngIf="email?.errors?.['email']" class="text-danger"> invalid
+                                        email<br></small>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="password" placeholder="**********" formControlName="password">
+                                <input type="password" class="form-control" id="password" placeholder="**********"
+                                    formControlName="password">
                                 <label for="name">Your Password</label>
                                 <div *ngIf="password?.invalid && password?.touched">
-                                    <small *ngIf="password?.errors?.['required']" class="text-danger">password required<br></small>
-                                    <small *ngIf="password?.errors?.['minLength']" class="text-danger"> invalid password<br></small>
+                                    <small *ngIf="password?.errors?.['required']" class="text-danger">password
+                                        required<br></small>
+                                    <small *ngIf="password?.errors?.['minlength']" class="text-danger">invalid
+                                        password<br></small>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="repassword" placeholder="**********" formControlName="repassword">
+                                <input type="password" class="form-control" id="repassword" placeholder="**********"
+                                    formControlName="repassword">
                                 <label for="name">Repeat Your Password</label>
                                 <div *ngIf="repassword?.invalid && repassword?.touched">
-                                    <small *ngIf="repassword?.errors?.['required']" class="text-danger">repassword required<br></small>
-                                    <small *ngIf="repassword?.errors?.['minLength']" class="text-danger"> invalid repassword<br></small>
-                                    <div *ngIf="repassword?.invalid || repassword?.value != password?.value" class="text-danger">
-                                        The passwords entered do not match
-                                    </div>
+                                    <small *ngIf="repassword?.errors?.['required']" class="text-danger">repassword
+                                        required<br></small>
+                                </div>
+                                <div *ngIf="repassword?.valid && repassword?.value != password?.value"
+                                    class="text-danger">
+                                    The passwords entered do not match
                                 </div>
                             </div>
                         </div>
 
 
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Register Now !</button>
+                            <button class="btn btn-primary w-100 py-3" [disabled]="registerForm.invalid"
+                                type="submit">Register Now !</button>
                         </div>
 
                         <div class="col-12">
