--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -289,7 +289,8 @@
 <!-- Courses End -->
 
 <!-- Team Start -->
-<div class="container-xxl py-5">
+<div class="container-xxl py-5" *ngIf="trainersList.length > 0">
+
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
@@ -297,16 +298,18 @@
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div *ngFor="let team of teamlists">
-                    <app-display-team>
-                        [firstname]="team.firstname"
-                        [lastname]="team.lastname"
-                        [speciality]="team.speciality"
-                        [image]="team.image"
-                    </app-display-team>
+                <div *ngFor="let trainer of trainersList">
+                    <app-trainer-item>
+                        [firstname]="trainer.firstname"
+                        [lastname]="trainer.lastname"
+                        [speciality]="trainer.speciality"
+                        [image]="trainer.image"
+                    </app-trainer-item>
                 </div>
+            </div>
         </div>
     </div>
+
 </div>
 <!-- Team End -->
 
@@ -328,7 +331,8 @@
                 <h5 class="mb-0">Client Name</h5>
                 <p>Profession</p>
                 <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos.
+                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et
+                        eos.
                         Clita erat ipsum et lorem et sit.</p>
                 </div>
             </div>
@@ -339,7 +343,8 @@
                 <h5 class="mb-0">Client Name</h5>
                 <p>Profession</p>
                 <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos.
+                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et
+                        eos.
                         Clita erat ipsum et lorem et sit.</p>
                 </div>
             </div>
@@ -350,7 +355,8 @@
                 <h5 class="mb-0">Client Name</h5>
                 <p>Profession</p>
                 <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos.
+                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et
+                        eos.
                         Clita erat ipsum et lorem et sit.</p>
                 </div>
             </div>
@@ -361,7 +367,8 @@
                 <h5 class="mb-0">Client Name</h5>
                 <p>Profession</p>
                 <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos.
+                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et
+                        eos.
                         Clita erat ipsum et lorem et sit.</p>
                 </div>
             </div>
