--- a/src/app/components/public/our-team/our-team.component.html
+++ b/src/app/components/public/our-team/our-team.component.html
@@ -24,20 +24,25 @@
 
 <!-- Team Start -->
 <div class="container-xxl py-5">
-    <div class="container">
+    <div class="container" *ngIf="trainersList.length == 0">
+        <div class="alert alert-info" role="alert">
+            Trainers not ready yet !
+        </div>
+    </div>
+    <div class="container" *ngIf="trainersList.length > 0">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
             <h1 class="mb-5">Expert Instructors</h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div *ngFor="let team of teamlists">
-                    <app-display-team>
-                        [firstname]="team.firstname"
-                        [lastname]="team.lastname"
-                        [speciality]="team.speciality"
-                        [image]="team.image"
-                    </app-display-team>
+                <div *ngFor="let trainer of trainersList">
+                    <app-trainer-item>
+                        [firstname]="trainer.firstname"
+                        [lastname]="trainer.lastname"
+                        [speciality]="trainer.speciality"
+                        [image]="trainer.image"
+                    </app-trainer-item>
                 </div>
 
             </div>
