--- a/src/app/components/public/footer/footer.component.html
+++ b/src/app/components/public/footer/footer.component.html
@@ -3,8 +3,8 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-white mb-3">Quick Link</h4>
-                <a class="btn btn-link" [routerLink]="['/About']">About Us</a>
-                <a class="btn btn-link" [routerLink]="['/Contact']">Contact Us</a>
+                <a class="btn btn-link" [routerLink]="['/about']">About Us</a>
+                <a class="btn btn-link" [routerLink]="['/contact']">Contact Us</a>
                 <a class="btn btn-link">Privacy Policy</a>
                 <a class="btn btn-link">Terms & Condition</a>
                 <a class="btn btn-link">FAQs & Help</a>
@@ -15,10 +15,10 @@
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -58,14 +58,14 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom">Your Site Name</a>, All Right Reserved.
+                    &copy; <a>Your Site Name</a>, All Right Reserved.
 
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="border-bottom">HTML Codex</a><br><br> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                    Designed By <a>HTML Codex</a><br><br> Distributed By <a>ThemeWagon</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
-                        <a [routerLink]="['/Home']">Home</a>
+                        <a [routerLink]="['/']">Home</a>
                         <a>Cookies</a>
                         <a>Help</a>
                         <a>FQAs</a>
