feature forgot Password

--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -54,6 +54,11 @@
                   Join Now !
                 </span>
               </h6>
+              <h6>Have you forgotten the password? !
+                <span routerLink="/forgotPassword" class="text-primary goto-link">
+                  Click Here !
+                </span>
+              </h6>
             </div>
 
           </div>
