--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -4,9 +4,29 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Core</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" routerLink="/dashboard">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
+                        </a>
+                        <a class="nav-link" routerLink="/dashboard">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-user-gear"></i></div>
+                            Users management
+                        </a>
+                        <a class="nav-link" routerLink="/category">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-box-archive"></i></div>
+                            categories management
+                        </a>
+                        <a class="nav-link" routerLink="/dashboard">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-person-chalkboard"></i></div>
+                            Trainers management
+                        </a>
+                        <a class="nav-link" routerLink="/dashboard">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-book"></i></div>
+                            Trainings management
+                        </a>
+                        <a class="nav-link" routerLink="/dashboard">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            messages management
                         </a>
                     </div>
                 </div>
