--- a/src/app/components/private/shared/categories-list/categoriesList.component.html
+++ b/src/app/components/private/shared/categories-list/categoriesList.component.html
@@ -17,8 +17,7 @@
               class="btn btn-primary mb-3"
               data-toggle="modal"
               data-target=".bd-example-modal-sm"
-              routerLink="/add-new-category"
-            >
+              routerLink="/add-new-category">
               + add
             </button>
 
