--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -8,7 +8,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <a class="nav-link" routerLink="/users-list">
+                        <a class="nav-link" routerLink="/dashboard">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-user-gear"></i></div>
                             Users management
                         </a>
@@ -16,7 +16,7 @@
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-box-archive"></i></div>
                             categories management
                         </a>
-                        <a class="nav-link" routerLink="/dashboard">
+                        <a class="nav-link" routerLink="/trainer-list">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-person-chalkboard"></i></div>
                             Trainers management
                         </a>
