--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -20,7 +20,7 @@
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-person-chalkboard"></i></div>
                             Trainers management
                         </a>
-                        <a class="nav-link" routerLink="/dashboard">
+                        <a class="nav-link" routerLink="/training-list">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-book"></i></div>
                             Trainings management
                         </a>
