--- a/src/app/components/private/shared/trainings/add-training/add-training.component.html
+++ b/src/app/components/private/shared/trainings/add-training/add-training.component.html
@@ -1,1 +1,86 @@
-<p>add-training works!</p>
+<div class="sb-nav-fixed">
+  <app-top-bar></app-top-bar>
+
+  <div id="layoutSidenav">
+    <app-side-bar></app-side-bar>
+
+    <!-- CONTENT-->
+
+    <div id="layoutSidenav_content">
+      <main>
+        <div class="container-fluid px-4">
+          <h2 style="color: black">add a new trainings</h2>
+
+          <form [formGroup]="myForm" (ngSubmit)="add()">
+            <div class="form-group">
+              <label for="exampleFormControlFile1" class="m-2">name</label>
+              <input
+                type="text"
+                class="form-control"
+                class="m-2"
+                formControlName="name"
+                id="name"
+              />
+              <label for="exampleFormControlFile1" class="m-2">objectif</label>
+              <input
+                type="text"
+                class="form-control"
+                class="m-2"
+                formControlName="objectif"
+                id="objectif"
+              />
+              <label for="exampleFormControlFile1" class="m-2">program</label>
+              <input
+                type="text"
+                class="form-control"
+                class="m-2"
+                formControlName="program"
+                id="program"
+              />
+              <label for="exampleFormControlFile1" class="m-2">hours</label>
+              <input
+                type="text"
+                class="form-control"
+                class="m-2"
+                formControlName="hours"
+                id="hours"
+              />
+              <label for="exampleFormControlFile1" class="m-2">trainer</label>
+              <select class="form-select" formControlName="idTrainer" id="idTrainer" aria-label="Default select example">
+                <option selected>Open this select menu</option>
+                <option
+                  *ngFor="let trainer of trainersList; let i = index"
+                  [value]="trainer._id"    
+                >
+                  {{ trainer.firstname }} {{ trainer.lastname }}
+                </option>
+              </select>
+              <label for="exampleFormControlFile1" class="m-2">category</label>
+              <select class="form-select" formControlName="idCategory" id="idCategory" aria-label="Default select example">
+                <option selected>Open this select menu</option>
+                <option
+                  *ngFor="let category of categoryList; let i = index"
+                  [value]="category._id" 
+                >
+                  {{ category.name }}
+                </option>
+              </select>
+              <label for="exampleFormControlFile1" class="m-2"
+                >Example file input</label
+              >
+              <input
+                type="file"
+                class="form-control-file"
+                (change)="save($event)"
+                class="m-2"
+                id="exampleFormControlFile1"
+              />
+              <button class="btn btn-primary" type="submit">add</button>
+            </div>
+          </form>
+        </div>
+      </main>
+    </div>
+  </div>
+  <app-footer-dashboard></app-footer-dashboard>
+</div>
