--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -120,7 +120,7 @@
 <!-- About End -->
 
 <!-- Categories Start -->
-<div class="container-xxl py-5 category">
+<div *ngIf="categoriesList.length  > 0" class="container-xxl py-5 category">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title bg-white text-center text-primary px-3">Categories</h6>
