--- a/src/app/components/private/shared/trainers/modify-trainer/modify-trainer.component.html
+++ b/src/app/components/private/shared/trainers/modify-trainer/modify-trainer.component.html
@@ -14,81 +14,104 @@
 
           <form [formGroup]="updateTrainerForm" (ngSubmit)="update()">
             <div class="form-group text-center">
-            <img
-              [src]="imageUrl"
-              class="image-fluid category-image"
-              alt="" style="width: 150px;" 
-            />
+              <img [src]="imageUrl" class="image-fluid category-image" alt="" style="width: 150px;" />
               <input type="file" class="form-control upload-input" (change)="save($event)" id="customFile" />
             </div>
             <div class="form-group">
               <div class="row">
                 <div class="col-lg-6 my-2">
                   <label for="exampleFormControlFile1">firstname : </label>
+                  <div *ngIf="firstname?.touched && firstname?.invalid">
+                    <small *ngIf="firstname?.errors?.['required']" class="text-danger">name is
+                        required<br></small>
+                    <small *ngIf="firstname?.errors?.['pattern']" class="text-danger">Invalid
+                        name<br></small>
+                    <small *ngIf="firstname?.errors?.['minlength']" class="text-danger">name must contain two
+                        characters at least</small>
+                </div>
                 </div>
                 <div class="col-lg-6 my-2">
                   <label for="exampleFormControlFile1">lastname :</label>
+                  <div *ngIf="lastname?.touched && lastname?.invalid">
+                    <small *ngIf="lastname?.errors?.['required']" class="text-danger">lastname is
+                        required<br></small>
+                    <small *ngIf="lastname?.errors?.['pattern']" class="text-danger">Invalid
+                        lastname<br></small>
+                    <small *ngIf="lastname?.errors?.['minlength']" class="text-danger">lastname must contain two
+                        characters at least</small>
+                </div>
                 </div>
                 <div class="col-lg-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="firstname"
-                    id="firstname"
-                  />
+                  <input type="text" class="form-control" formControlName="firstname" id="firstname" />
                 </div>
                 <div class="col-lg-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="lastname"
-                    id="lastname"
-                  />
+                  <input type="text" class="form-control" formControlName="lastname" id="lastname" />
                 </div>
               </div>
             </div>
             <div class="form-group mt-2">
               <label for="exampleFormControlFile1" class="mb-2">email :</label>
-              <input
-                type="text"
-                class="form-control"
-                formControlName="email"
-                id="email"
-              />
+              <div *ngIf="email?.touched && email?.invalid">
+                <small *ngIf="email?.errors?.['required']" class="text-danger">email is
+                    required<br></small>
+                <small *ngIf="email?.errors?.['pattern']" class="text-danger">Invalid
+                    email<br></small>
+                <small *ngIf="email?.errors?.['minlength']" class="text-danger">email must contain two
+                    characters at least</small>
             </div>
-            
-              <div class="form-group">
-                <div class="row">
+              <input type="text" class="form-control" formControlName="email" id="email" />
+            </div>
+
+            <div class="form-group">
+              <div class="row">
                 <div class="col-lg-6">
                   <label for="exampleFormControlFile1">speciality</label>
+                  <div *ngIf="speciality?.touched && speciality?.invalid">
+                    <small *ngIf="speciality?.errors?.['required']" class="text-danger">speciality is
+                        required<br></small>
+                    <small *ngIf="speciality?.errors?.['pattern']" class="text-danger">Invalid
+                        speciality<br></small>
+                    <small *ngIf="speciality?.errors?.['minlength']" class="text-danger">speciality must contain two
+                        characters at least</small>
                 </div>
-              
-              <div class="col-lg-6">
-                <label for="exampleFormControlFile1">years of experience</label>
-              </div>
-              <div class="col-lg-6">
-                <input
-                  type="text"
-                  class="form-control"
-                  formControlName="speciality"
-                  id="speciality"
-                />
-              </div>
-              <div class="col-lg-6">
-                <input
-                  type="text"
-                  class="form-control"
-                  formControlName="yearsOfExperience"
-                  id="yearsOfExperience"
-                />
+                </div>
+
+                <div class="col-lg-6">
+                  <label for="exampleFormControlFile1">years of experience</label>
+                  <div *ngIf="yearsOfExperience?.touched && yearsOfExperience?.invalid">
+                    <small *ngIf="yearsOfExperience?.errors?.['required']" class="text-danger">yearsOfExperience is
+                        required<br></small>
+                    <small *ngIf="yearsOfExperience?.errors?.['pattern']" class="text-danger">Invalid
+                        yearsOfExperience<br></small>
+                    <small *ngIf="yearsOfExperience?.errors?.['minlength']" class="text-danger">yearsOfExperience must contain two
+                        characters at least</small>
+                </div>
+                </div>
+                <div class="col-lg-6">
+                  <input type="text" class="form-control" formControlName="speciality" id="speciality" />
+                </div>
+                <div class="col-lg-6">
+                  <input type="text" class="form-control" formControlName="yearsOfExperience" id="yearsOfExperience" />
+                </div>
               </div>
             </div>
-              </div>
+            <div class="form-group mt-2">
+              <label for="exampleFormControlFile1" class="mb-2">facebook :</label>
+              <input type="text" class="form-control" formControlName="facebook" id="facebook" />
+            </div>
+            <div class="form-group mt-2">
+              <label for="exampleFormControlFile1" class="mb-2">instagram :</label>
+              <input type="text" class="form-control" formControlName="instagram" id="instagram" />
+            </div>
+            <div class="form-group mt-2">
+              <label for="exampleFormControlFile1" class="mb-2">twitter :</label>
+              <input type="text" class="form-control" formControlName="twitter" id="twitter" />
+            </div>
 
 
 
 
-            <button class="btn btn-primary" type="submit">add</button>
+            <button class="btn btn-primary mt-3" type="submit">add</button>
           </form>
         </div>
       </main>
