--- a/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
+++ b/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
@@ -9,7 +9,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h2 style="color: black">users managment</h2>
+            <h2 style="color: black">trainers managment</h2>
   
             <div>
               <button
@@ -41,6 +41,9 @@
                     <th>email</th>
                     <th>speciality</th>
                     <th>years of experience</th>
+                    <th>facebook</th>
+                    <th>instagram</th>
+                    <th>twitter</th>
                     <th>edit</th>
                   </tr>
                 </thead>
@@ -52,6 +55,9 @@
                     <td>{{ trainer.email }}</td>
                     <td>{{ trainer.speciality }}</td>
                     <td>{{ trainer.yearsOfExperience }}</td>
+                    <td>{{ trainer.facebook }}</td>
+                    <td>{{ trainer.instagram }}</td>
+                    <td>{{ trainer.twitter }}</td>
                     <td>
                       <button
                         class="btn btn-warning mx-2"
