--- a/src/app/components/private/shared/categories/modify-category/modify-category.component.html
+++ b/src/app/components/private/shared/categories/modify-category/modify-category.component.html
@@ -34,10 +34,11 @@
                   id="categoryName"
                 />
               </div>
+              
             </div>
             
             
-            <button class="btn btn-primary mt-2" type="submit">add</button>
+            <button class="btn btn-primary mt-2" type="submit">update</button>
           </form>
         </div>
       </main>
