--- a/src/app/components/public/courses/courses.component.css
+++ b/src/app/components/public/courses/courses.component.css
@@ -8,7 +8,6 @@
     color: #2bc5d4;
 }
 .card-shadow{
-
     border: none;
 }
 
@@ -16,4 +15,6 @@
     background-color: #F0FBFC;
 
 }
-
+.trainer-card{
+    object-fit: cover;
+}
