--- a/src/app/components/public/courses/courses.component.html
+++ b/src/app/components/public/courses/courses.component.html
@@ -26,6 +26,17 @@
   </div>
 </div>
 <!-- Header End -->
+<div *ngIf="categoriesList.length == 0" class="container-xxl py-5 category">
+  <div class="container">
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+      <h6 class="section-title bg-white text-center text-primary px-3">
+        Categories
+      </h6>
+      <h1 class="mb-5">there is no categories right now, check us later</h1>
+    </div>
+  </div>
+</div>
+
 
 <!-- Categories Start -->
 <div *ngIf="categoriesList.length > 0" class="container-xxl py-5 category">
@@ -37,12 +48,12 @@
       <h1 class="mb-5">Courses Categories</h1>
     </div>
 
-    <div class="row g-3 align-items-center justify-content-between d-flex">
+    <div class="row g-3 align-items-center justify-content-center d-flex">
       <div
         *ngFor="let category of categoriesList"
-        class="col-lg mr-2 col-md-6 mr-5"
+        class="col-lg-4 mr-2 col-md-6 mr-5"
       >
-        <div class="card" style="width: 25rem">
+        <div class="card card-shadow" style="width: 25rem">
           <img
             src="http://localhost:3000/{{ category.image }}"
             class="card-img-top category-img"
@@ -51,7 +62,10 @@
           <div class="card-body backg">
             <h2 class="card-title">{{ category.name }}</h2>
             <p class="card-text">
-             courses <small><b>({{ category.trainings }})</b></small>
+              courses
+              <small
+                ><b>({{ category.trainings }})</b></small
+              >
             </p>
             <a href="#" class="btn btn-primary">Explore</a>
           </div>
@@ -62,8 +76,19 @@
 </div>
 <!-- Categories Start -->
 
+<div *ngIf="trainingsList.length == 0" class="container-xxl py-5 category">
+  <div class="container">
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+      <h6 class="section-title bg-white text-center text-primary px-3">
+        courses
+      </h6>
+      <h1 class="mb-5">there is no courses right now, check us later</h1>
+    </div>
+  </div>
+</div>
+
 <!-- Courses Start -->
-<div class="container-xxl py-5">
+<div *ngIf="trainingsList.length > 0" class="container-xxl py-5">
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
@@ -72,10 +97,21 @@
       <h1 class="mb-5">Popular Courses</h1>
     </div>
     <div class="row g-4 justify-content-center">
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+      <div
+        class="col-lg-4 col-md-6 wow fadeInUp"
+        *ngFor="let training of trainingsList"
+        data-wow-delay="0.1s"
+      >
         <div class="course-item bg-light">
-          <div class="position-relative overflow-hidden">
-            <img class="img-fluid" src="assets/img/course-1.jpg" alt="" />
+          <div
+            class="position-relative trainer-card overflow-hidden"
+            style="height: 250px"
+          >
+            <img
+              class="img-fluid"
+              src="http://localhost:3000/{{ training.image }}"
+              alt=""
+            />
             <div
               class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4"
             >
@@ -103,106 +139,16 @@
               <small class="fa fa-star text-primary"></small>
               <small>(123)</small>
             </div>
-            <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
+            <h5 class="mb-4">{{ training.objectif }}</h5>
           </div>
           <div class="d-flex border-top">
             <small class="flex-fill text-center border-end py-2"
-              ><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small
+              ><i class="fa fa-user-tie text-primary me-2"></i
+              >{{ training.name }}</small
             >
             <small class="flex-fill text-center border-end py-2"
-              ><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small
-            >
-            <small class="flex-fill text-center py-2"
-              ><i class="fa fa-user text-primary me-2"></i>30 Students</small
-            >
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-        <div class="course-item bg-light">
-          <div class="position-relative overflow-hidden">
-            <img class="img-fluid" src="assets/img/course-2.jpg" alt="" />
-            <div
-              class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4"
-            >
-              <a
-                href="#"
-                class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
-                style="border-radius: 30px 0 0 30px"
-                >Read More</a
-              >
-              <a
-                href="#"
-                class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                style="border-radius: 0 30px 30px 0"
-                >Join Now</a
-              >
-            </div>
-          </div>
-          <div class="text-center p-4 pb-0">
-            <h3 class="mb-0">$149.00</h3>
-            <div class="mb-3">
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small>(123)</small>
-            </div>
-            <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
-          </div>
-          <div class="d-flex border-top">
-            <small class="flex-fill text-center border-end py-2"
-              ><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small
-            >
-            <small class="flex-fill text-center border-end py-2"
-              ><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small
-            >
-            <small class="flex-fill text-center py-2"
-              ><i class="fa fa-user text-primary me-2"></i>30 Students</small
-            >
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-        <div class="course-item bg-light">
-          <div class="position-relative overflow-hidden">
-            <img class="img-fluid" src="assets/img/course-3.jpg" alt="" />
-            <div
-              class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4"
-            >
-              <a
-                href="#"
-                class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
-                style="border-radius: 30px 0 0 30px"
-                >Read More</a
-              >
-              <a
-                href="#"
-                class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                style="border-radius: 0 30px 30px 0"
-                >Join Now</a
-              >
-            </div>
-          </div>
-          <div class="text-center p-4 pb-0">
-            <h3 class="mb-0">$149.00</h3>
-            <div class="mb-3">
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small>(123)</small>
-            </div>
-            <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
-          </div>
-          <div class="d-flex border-top">
-            <small class="flex-fill text-center border-end py-2"
-              ><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small
-            >
-            <small class="flex-fill text-center border-end py-2"
-              ><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small
+              ><i class="fa fa-clock text-primary me-2"></i
+              >{{ training.hours }}</small
             >
             <small class="flex-fill text-center py-2"
               ><i class="fa fa-user text-primary me-2"></i>30 Students</small
