--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -138,7 +138,7 @@
                                     <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3"
                                         style="margin: 1px;">
                                         <h5 class="m-0">{{category.name}}</h5>
-                                        <small class="text-primary">49 Courses</small>
+                                        <small class="text-primary">{{category.trainings}} Courses</small>
                                     </div>
                                 </a>
                             </div>
@@ -158,11 +158,11 @@
             <h6 class="section-title bg-white text-center text-primary px-3">Courses</h6>
             <h1 class="mb-5">Popular Courses</h1>
         </div>
-        <div class="row g-4 justify-content-center">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="course-item bg-light">
-                    <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="assets/img/course-1.jpg" alt="">
+        <div class="row g-4 justify-content-center"  >
+            <div class="col-lg-4 col-md-6 wow fadeInUp" *ngFor="let training of trainingsList" data-wow-delay="0.1s">
+                <div class="course-item bg-light "  >
+                    <div class="position-relative trainer-card overflow-hidden" style="height:250px">
+                        <img class="img-fluid" src="http://localhost:3000/{{training.image}}"alt="">
                         <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                             <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                 style="border-radius: 30px 0 0 30px;">Read More</a>
@@ -180,13 +180,13 @@
                             <small class="fa fa-star text-primary"></small>
                             <small>(123)</small>
                         </div>
-                        <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
+                        <h5 class="mb-4">{{training.objectif}}</h5>
                     </div>
                     <div class="d-flex border-top">
                         <small class="flex-fill text-center border-end py-2"><i
-                                class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
+                                class="fa fa-user-tie text-primary me-2"></i>{{training.name}}</small>
                         <small class="flex-fill text-center border-end py-2"><i
-                                class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
+                                class="fa fa-clock text-primary me-2"></i>{{training.hours}}</small>
                         <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30
                             Students</small>
                     </div>
@@ -272,19 +272,17 @@
             <h1 class="mb-5">Expert Instructors</h1>
         </div>
         <div class="row g-4">
-            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div *ngFor="let trainer of trainersList">
-                    <app-trainer-item>
-                        [firstname]="trainer.firstname"
-                        [lastname]="trainer.lastname"
-                        [speciality]="trainer.speciality"
-                        [image]="trainer.image"
-                    </app-trainer-item>
-                </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" *ngFor="let trainer of trainersList" data-wow-delay="0.1s">
+
+                <app-trainer-item [firstname]="trainer.firstname" [lastname]="trainer.lastname"
+                [speciality]="trainer.speciality" [image]="trainer.image" [facebook]="trainer.facebook"
+                [instagram]="trainer.instagram" [twitter]="trainer.twitter">
+
+            </app-trainer-item>
             </div>
         </div>
-    </div>
 
+    </div>
 </div>
 <!-- Team End -->
 
